--- a/css/index.css
+++ b/css/index.css
@@ -481,9 +481,8 @@ pre {
   left: 0;
 }
 /** Let's get foufou */
-#__next {
-  padding: 2em;
-  text-align: center;
+#__next > .container {
+  padding: 3em;
 }
 .page-background {
   position: fixed;
